apps/athena/pihole/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: pihole
  namespace: pihole
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production # Specify the name of your issuer resource
spec:
  gatewayClassName: cilium
  listeners:
    - hostname: pihole.uclab8.net # Specify a valid domain to reach your application
      name: pihole-uclab8-net-https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: pihole-uclab8-tls # Specify the secret name to be used with your application
      allowedRoutes:
        namespaces:
          from: All
