apps/athena/pihole/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole
  namespace: pihole
spec:
  hostnames:
    - pihole.uclab8.net # Specify a valid domain to reach your application
  parentRefs:
    - name: pihole
  rules:
    - backendRefs:
        - name: pihole # Specify the service of the application
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
status:
  parents: []
